[project]
name = "cubeclient"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.black]
line-length = 119

[tool.poetry]
name = "cubeclient"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.9"
websocket = "~0.2"
requests = "^2.31.0"
cachetools = "^5.3.2"
promise = "~2.3"
bidict = "^0.23.0"
simplejson = "~3.19"
Pillow = "~9.4"
yeetlong = { git = "https://github.com/guldfisk/yeetlong.git" }
orp = { git = "https://github.com/guldfisk/orp.git" }
mtgorp = { git = "https://github.com/guldfisk/mtgorp.git" }
magiccube = { git = "https://github.com/guldfisk/magiccube.git" }
mtgimg = { git = "https://github.com/guldfisk/mtgimg.git" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
